# qt_playground

./: CMakeLists.txt  main.cpp
quick/helloworld/: CMakeLists.txt  Main.qml  main.cpp
widgets/helloworld/: CMakeLists.txt  main.cpp
